@@ -30,4 +30,13 @@ XferDialog * gnc_xfer_dialog(GtkWidget * parent, Account *initial);
 
 void gnc_ui_destroy_xfer_windows();
 
+void gnc_xfer_dialog_select_from_account(XferDialog *xferData,
+                                         Account *account);
+void gnc_xfer_dialog_select_to_account(XferDialog *xferData,
+                                       Account *account);
+
+void gnc_xfer_dialog_set_amount(XferDialog *xferData, double amount);
+void gnc_xfer_dialog_set_description(XferDialog *xferData,
+                                     const char *description);
+
 #endif
